# NoGoBot

./: .gitignore  CMakeLists.txt
include/: alpha_nogo_common.h
src/: main.cpp
